@@ -1,1 +1,2 @@
-This file is deprecated.  Please see doc/README.txt.
+Please see doc/README.txt.
+
